objects/Month_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Forecast_Override__c</fullName>
        <label>Forecast Override</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Level_5_6_or_7__c</fullName>
        <label>Territory Level (5, 6 or 7)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Month_Forecast</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Month Forecast</label>
    <nameField>
        <label>MonthForecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Month Forecast</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>